# Homer

./: .gitignore  LICENSE  MARKETING.md  PUBLISH.md  README.md  USER_TEST.md  compress.js  homer.js  homer.py  index.html  publish.bat  publish.sh  pyproject.toml  setup.py
.claude/: settings.local.json
benchmark/: benchmark.py
benchmark/data/: git_log_full.txt
chrome-extension/: README.md  background.js  caveman.js  content.js  manifest.json  popup.html  popup.js
chrome-extension/icons/: README.md
